[gd_scene load_steps=5 format=3 uid="uid://bfc6jx8rjqpqb"]

[ext_resource type="Script" path="res://menu/pause_menu_options.gd" id="1_hocqk"]
[ext_resource type="Script" path="res://menu/menu.gd" id="2_tgs08"]
[ext_resource type="FontVariation" uid="uid://dnwv2plgp22ay" path="res://assets/fonts/poco_import.tres" id="3_m44n5"]
[ext_resource type="Texture2D" uid="uid://dasdtv1tofufw" path="res://assets/sprites/ui_cursor.png" id="4_wdtve"]

[node name="PauseMenuOptions" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hocqk")

[node name="Menu" type="VBoxContainer" parent="." node_paths=PackedStringArray("pointer")]
layout_mode = 0
offset_left = 16.0
offset_top = -3.0
offset_right = 38.0
offset_bottom = 25.0
scale = Vector2(0.992402, 1)
script = ExtResource("2_tgs08")
pointer = NodePath("../Cursor")

[node name="Resume" type="Label" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m44n5")
theme_override_font_sizes/font_size = 10
text = "Resume
"

[node name="Restart" type="Label" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m44n5")
theme_override_font_sizes/font_size = 10
text = "Restart"

[node name="Quit" type="Label" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m44n5")
theme_override_font_sizes/font_size = 10
text = "Quit
"

[node name="ConfirmQuit" type="VBoxContainer" parent="." node_paths=PackedStringArray("pointer")]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = -3.0
offset_right = 38.0
offset_bottom = 25.0
scale = Vector2(0.992402, 1)
script = ExtResource("2_tgs08")
pointer = NodePath("../Cursor")

[node name="NoQuit" type="Label" parent="ConfirmQuit"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m44n5")
theme_override_font_sizes/font_size = 10
text = "No
"

[node name="YesQuit" type="Label" parent="ConfirmQuit"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m44n5")
theme_override_font_sizes/font_size = 10
text = "Yes"

[node name="ConfirmRestart" type="VBoxContainer" parent="." node_paths=PackedStringArray("pointer")]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = -3.0
offset_right = 38.0
offset_bottom = 25.0
scale = Vector2(0.992402, 1)
script = ExtResource("2_tgs08")
pointer = NodePath("../Cursor")

[node name="NoRestart" type="Label" parent="ConfirmRestart"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m44n5")
theme_override_font_sizes/font_size = 10
text = "No
"

[node name="YesRestart" type="Label" parent="ConfirmRestart"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m44n5")
theme_override_font_sizes/font_size = 10
text = "Yes"

[node name="Cursor" type="Sprite2D" parent="."]
position = Vector2(6, 5)
texture = ExtResource("4_wdtve")

[connection signal="do_item" from="Menu" to="." method="_on_menu_do_item"]
[connection signal="do_item" from="ConfirmQuit" to="." method="_on_menu_do_item"]
[connection signal="do_item" from="ConfirmRestart" to="." method="_on_menu_do_item"]
